[metadata]
name = quick_github_gist
version = 1.0
description = A tool that allows to quickly create github gists from your files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominikwalk/quick-gist
author = Dominik Walk
author_email = dominik.walk@mail.de
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = quick_gist
python_requires = >=3.9

[options.entry_points]
console_scripts =
    quick-gist = quick_gist.main:main
